[feat] 4장 예제 코드 작성